--- a/index.html
+++ b/index.html
@@ -5270,6 +5270,13 @@
 </tr>
 
 <tr>
+<td>Archaia Studio Press</td>
+<td>2003</td>
+<td>Publisher</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Archangel</td>
 <td>1996</td>
 <td>Marvel</td>
@@ -5753,10 +5760,38 @@
 </tr>
 
 <tr>
+<td>Artesia</td>
+<td>2003</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Arthur Adams</td>
 <td>1963</td>
 <td>Creator</td>
 <td><a href="ArthurAdams/ArthurAdams.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Artesia Afield</td>
+<td>2003</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Artesia Afire</td>
+<td>2003</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Artesia Besieged</td>
+<td>2006</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
 </tr>
 
 <tr>
@@ -6702,6 +6737,13 @@
 <td>1997</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Awakening</td>
+<td>2007</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
 </tr>
 
 <tr>
@@ -10285,6 +10327,13 @@
 <td>1962</td>
 <td>Gold Key</td>
 <td><a href="GoldKey/GoldKey.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bond Of Saint Marcel</td>
+<td>2008</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
 </tr>
 
 <tr>
@@ -13884,6 +13933,13 @@
 </tr>
 
 <tr>
+<td>Classic Space: 1999</td>
+<td>2013</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Classic Star Wars</td>
 <td>1992</td>
 <td>Dark Horse</td>
@@ -15213,6 +15269,20 @@
 </tr>
 
 <tr>
+<td>Cow Boy</td>
+<td>2012</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Cow Boy: A Boy And His Horse</td>
+<td>2012</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Cow Puncher</td>
 <td>1953</td>
 <td>Avon</td>
@@ -15668,6 +15738,13 @@
 </tr>
 
 <tr>
+<td>Critical Millennium: The Dark Frontier</td>
+<td>2010</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Critters</td>
 <td>1986</td>
 <td>Fantagraphics</td>
@@ -16046,6 +16123,13 @@
 </tr>
 
 <tr>
+<td>Cursed Pirate Girl</td>
+<td>2012</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Cursed Pirated Girl Annual</td>
 <td>2015</td>
 <td>Boom!</td>
@@ -16204,6 +16288,20 @@
 <td>2008</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Cyborg 009: Chapter 000</td>
+<td>2013</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Cyclops</td>
+<td>2010</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
 </tr>
 
 <tr>
@@ -16639,6 +16737,13 @@
 <td>1982</td>
 <td>Universal</td>
 <td><a href="DarkCrystal/DarkCrystal.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Dark Crystal: Creation Myths</td>
+<td>2011</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
 </tr>
 
 <tr>
@@ -17188,13 +17293,6 @@
 </tr>
 
 <tr>
-<td>Days Of Hate</td>
-<td>2018</td>
-<td>Image</td>
-<td><a href="Image/image.html">Details</a></td>
-</tr>
-
-<tr>
 <td>Day Of The Defenders</td>
 <td>2001</td>
 <td>Marvel</td>
@@ -17213,6 +17311,27 @@
 <td>1997</td>
 <td>Marvel</td>
 <td><a href="DayDreamers/DayDreamers.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Days Missing</td>
+<td>2009</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Days Missing: Kestus</td>
+<td>2010</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Days Of Hate</td>
+<td>2018</td>
+<td>Image</td>
+<td><a href="Image/image.html">Details</a></td>
 </tr>
 
 <tr>
@@ -20933,6 +21052,13 @@
 </tr>
 
 <tr>
+<td>Engineer</td>
+<td>2007</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Enigma</td>
 <td>1993</td>
 <td>Vertigo</td>
@@ -22487,6 +22613,13 @@
 </tr>
 
 <tr>
+<td>Feeding Ground</td>
+<td>2010</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Feiffer: The Collected Works</td>
 <td>1988</td>
 <td>Fantagraphics</td>
@@ -23652,6 +23785,13 @@
 <td>1983</td>
 <td>Jim Henson</td>
 <td><a href="FraggleRock/FraggleRock.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Fraggle Rock</td>
+<td>2010</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
 </tr>
 
 <tr>
@@ -26574,6 +26714,13 @@
 </tr>
 
 <tr>
+<td>Gunnerkrigg Court</td>
+<td>2008</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Gung-Ho</td>
 <td>2019</td>
 <td>Ablaze</td>
@@ -28974,6 +29121,13 @@
 </tr>
 
 <tr>
+<td>Hybrid Bastards</td>
+<td>2007</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Hyde</td>
 <td>2004</td>
 <td>IDW</td>
@@ -29384,6 +29538,13 @@
 <td>2003</td>
 <td>Vertigo</td>
 <td><a href="InTheShadowEAP/InTheShadowEAP.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Inanna's Tears</td>
+<td>2007</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
 </tr>
 
 <tr>
@@ -30756,6 +30917,13 @@
 <td>2018</td>
 <td>Boom!</td>
 <td><a href="Boom!/Boom!.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Jim Henson's Tale Of Sand</td>
+<td>2011</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
 </tr>
 
 <tr>
@@ -32194,10 +32362,24 @@
 </tr>
 
 <tr>
+<td>Killer</td>
+<td>2006</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Killer Instinct</td>
 <td>2017</td>
 <td>Dynamite</td>
 <td><a href="Dynamite/Dynamite.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Killer Omnibus</td>
+<td>2014</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
 </tr>
 
 <tr>
@@ -32212,6 +32394,13 @@
 <td>1985</td>
 <td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Killer: Modus Vivendi</td>
+<td>2010</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
 </tr>
 
 <tr>
@@ -32233,6 +32422,13 @@
 <td>1988</td>
 <td>DC</td>
 <td><a href="BatmanTheKillingJoke/BatmanTheKillingJoke.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Killing Pickman</td>
+<td>2007</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
 </tr>
 
 <tr>
@@ -34490,6 +34686,13 @@
 </tr>
 
 <tr>
+<td>Lone And Level Sands</td>
+<td>2005</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Lone Eagle</td>
 <td>1954</td>
 <td>Farrell</td>
@@ -34627,6 +34830,13 @@
 <td>1951</td>
 <td>Fiction House</td>
 <td><a href="LongBow/LongBow.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Long Count</td>
+<td>2007</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
 </tr>
 
 <tr>
@@ -34970,6 +35180,13 @@
 <td>2007</td>
 <td>Image</td>
 <td><a href="Image/image.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Lucid</td>
+<td>2010</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
 </tr>
 
 <tr>
@@ -35706,6 +35923,13 @@
 <td>1984</td>
 <td>Archie</td>
 <td><a href="ArchieComics/ArchieComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Many Adventures Of Miranda Mercury</td>
+<td>2008</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
 </tr>
 
 <tr>
@@ -38011,6 +38235,13 @@
 </tr>
 
 <tr>
+<td>Misericordia</td>
+<td>2007</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Misfit City</td>
 <td>2017</td>
 <td>Boom!</td>
@@ -38473,6 +38704,13 @@
 </tr>
 
 <tr>
+<td>Moon Lake</td>
+<td>2010</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Moon Mullins</td>
 <td>1947</td>
 <td>ACG</td>
@@ -38710,6 +38948,13 @@
 </tr>
 
 <tr>
+<td>Mouse Guard</td>
+<td>2006</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Mouse Guard, Labrynth And Other Stories</td>
 <td>2014</td>
 <td>Boom!</td>
@@ -38724,10 +38969,38 @@
 </tr>
 
 <tr>
+<td>Mouse Guard: Fall 1152</td>
+<td>2007</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Mouse Guard: Legends Of The Guard</td>
+<td>2010</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Mouse Guard: Legends Of The Guard</td>
 <td>2015</td>
 <td>Boom!</td>
 <td><a href="Boom!/Boom!.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Mouse Guard: The Black Axe</td>
+<td>2010</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Mouse Guard: Winter 1152</td>
+<td>2007</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
 </tr>
 
 <tr>
@@ -40979,6 +41252,20 @@
 </tr>
 
 <tr>
+<td>Okko: The Cycle Of Air</td>
+<td>2010</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Okko: The Cycle Of Earth</td>
+<td>2008</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Oklahoma Kid</td>
 <td>1957</td>
 <td>Farrell</td>
@@ -40990,6 +41277,13 @@
 <td>1995</td>
 <td>Dark Horse</td>
 <td><a href="Oktane/Oktane.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Old City Blues</td>
+<td>2011</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
 </tr>
 
 <tr>
@@ -41753,6 +42047,20 @@
 <td>1954</td>
 <td>EC</td>
 <td><a href="Panic/Panic.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Pantalones, TX: Don't Chicken Out</td>
+<td>2013</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Pantalones, TX: Zombiñata</td>
+<td>2013</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
 </tr>
 
 <tr>
@@ -43496,6 +43804,13 @@
 </tr>
 
 <tr>
+<td>Primordia</td>
+<td>2007</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Primus</td>
 <td>1972</td>
 <td>Charlton</td>
@@ -45097,6 +45412,13 @@
 </tr>
 
 <tr>
+<td>Revere: Revolution In Silver</td>
+<td>2007</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Revenge</td>
 <td>2014</td>
 <td>Image</td>
@@ -45754,7 +46076,7 @@
 </tr>
 
 <tr>
-<td>Robcop: Road Trip</td>
+<td>Robocop: Road Trip</td>
 <td>2012</td>
 <td>Dynamite</td>
 <td><a href="Dynamite/Dynamite.html">Details</a></td>
@@ -45779,6 +46101,13 @@
 <td>2013</td>
 <td>Dynamite</td>
 <td><a href="Dynamite/Dynamite.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Robotika</td>
+<td>2005</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
 </tr>
 
 <tr>
@@ -47515,6 +47844,13 @@
 </tr>
 
 <tr>
+<td>Secret History</td>
+<td>2007</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Secret Invasion</td>
 <td>2008</td>
 <td>Marvel</td>
@@ -48872,6 +49208,13 @@
 </tr>
 
 <tr>
+<td>Skrumps</td>
+<td>2011</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Skunk</a>
 <td>1993</td>
 <td>MU Press</td>
@@ -49605,6 +49948,13 @@
 <td>1975</td>
 <td>Charlton</td>
 <td><a href="Charlton/Charlton.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Space: 1999: Aftershock And Awe</td>
+<td>2012</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
 </tr>
 
 <tr>
@@ -50487,6 +50837,13 @@
 <td>1986</td>
 <td>Aircel</td>
 <td><a href="StarkFuture/StarkFuture.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Starkweather: Immortal</td>
+<td>2007</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
 </tr>
 
 <tr>
@@ -51953,6 +52310,13 @@
 </tr>
 
 <tr>
+<td>Syndrome</td>
+<td>2010</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Syphons</td>
 <td>1986</td>
 <td>Now</td>
@@ -53206,6 +53570,13 @@
 </tr>
 
 <tr>
+<td>Titanium Rain</td>
+<td>2008</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Titans Of Finance</td>
 <td>2001</td>
 <td>Alternative Comics</a>
@@ -53959,6 +54330,13 @@
 <td>1962</td>
 <td>Harvey</td>
 <td><a href="HarveyComics/HarveyComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Tumor</td>
+<td>2010</td>
+<td>Archaia</td>
+<td><a href="Archaia/Archaia.html">Details</a></td>
 </tr>
 
 <tr>
