--- a/index.html
+++ b/index.html
@@ -6600,6 +6600,13 @@
 </tr>
 
 <tr>
+<td>Avatar Press</td>
+<td>1996</td>
+<td>Publisher</td>
+<td><a href="AvatarPress/AvatarPress.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Avco Embassy</td>
 <td>1942</td>
 <td>Publisher</td>
