--- a/AvatarPress/AvatarPress.html
+++ b/AvatarPress/AvatarPress.html
@@ -230,42 +230,42 @@ Titles
 <li><a href="Avatar98.jpg">Crossed Special   </a> (2013)
 <li><a href="Avatar99.jpg">Crossed 3D     </a> (2011)
 <li><a href="Avatar100.jpg">Crossed Badlands   </a> (2012)
-<li><a href="Avatar.jpg">Crossed Family Values  </a> (2010)
-<li><a href="Avatar.jpg">Crossed Plus One Hundred   </a> (2014)
-<li><a href="Avatar.jpg">Crossed Plus One Hundred Taste Test    </a> (2014)
-<li><a href="Avatar.jpg">Crossed Psychopath     </a> (2011)
-<li><a href="Avatar.jpg">Crossed Sketchbook     </a> (2008)
-<li><a href="Avatar.jpg">Cuda   </a> (1998)
-<li><a href="Avatar.jpg">Dan the Unharmable     </a> (2012)
-<li><a href="Avatar.jpg">Dark Blue  </a> (2002)
-<li><a href="Avatar.jpg">Demonslayer: Future Shock  </a> (2002)
-<li><a href="Avatar.jpg">Demonslayer: Lords of Night    </a> (2003)
-<li><a href="Avatar.jpg">Demonslayer: Path of Time  </a> (2002)
-<li><a href="Avatar.jpg">Demonslayer: Prophecy  </a> (2001)
-<li><a href="Avatar.jpg">Demonslayer: Rave  </a> (2001)
-<li><a href="Avatar.jpg">Demonslayer: Vengeance     </a> (2001)
-<li><a href="Avatar.jpg">Dicks  </a> (2012)
-<li><a href="Avatar.jpg">Dicks 2    </a> (2002)
-<li><a href="Avatar.jpg">Dicks Winter Special   </a> (2005)
-<li><a href="Avatar.jpg">Dicks X-Mas Special    </a> (2003)
-<li><a href="Avatar.jpg">Dicks: To the End of Time, Like    </a> (2014)
-<li><a href="Avatar.jpg">Disenchanted Debut     </a> (2013)
-<li><a href="Avatar.jpg">Doktor Sleepless   </a> (2007)
-<li><a href="Avatar.jpg">Doktor Sleepless Manual    </a> (2008)
-<li><a href="Avatar.jpg">Donna Mia  </a> (1997)
-<li><a href="Avatar.jpg">Donna Mia Giant-Size   </a> (1997)
-<li><a href="Avatar.jpg">Donna Mia Infinity     </a> (1998)
-<li><a href="Avatar.jpg">Donna Mia Pinup    </a> (1997)
-<li><a href="Avatar.jpg">Donna Mia: The Tower   </a> (1998)
-<li><a href="Avatar.jpg">Dreamwalker    </a> (1998)
-<li><a href="Avatar.jpg">Dreamwalker: Carousel  </a> (1999)
-<li><a href="Avatar.jpg">Dreamwalker: Summer Rain   </a> (1999)
-<li><a href="Avatar.jpg">Escape of the Living Dead  </a> (2005)
-<li><a href="Avatar.jpg">Escape of the Living Dead Annual   </a> (2007)
-<li><a href="Avatar.jpg">Escape of the Living Dead Fearbook     </a> (2006)
-<li><a href="Avatar.jpg">Escape of the Living Dead: Airborne    </a> (2006)
-<li><a href="Avatar.jpg">Exposure Second Coming     </a> (2000)
-<li><a href="Avatar.jpg">Exposure Special 2001  </a> (2001)
+<li><a href="Avatar101.jpg">Crossed Family Values  </a> (2010)
+<li><a href="Avatar102.jpg">Crossed Plus One Hundred   </a> (2014)
+<li><a href="Avatar103.jpg">Crossed Plus One Hundred Taste Test    </a> (2014)
+<li><a href="Avatar104.jpg">Crossed Psychopath     </a> (2011)
+<li><a href="Avatar105.jpg">Crossed Sketchbook     </a> (2008)
+<li><a href="Avatar106.jpg">Cuda   </a> (1998)
+<li><a href="Avatar107.jpg">Dan the Unharmable     </a> (2012)
+<li><a href="Avatar108.jpg">Dark Blue  </a> (2002)
+<li><a href="Avatar109.jpg">Demonslayer: Future Shock  </a> (2002)
+<li><a href="Avatar110.jpg">Demonslayer: Lords of Night    </a> (2003)
+<li><a href="Avatar111.jpg">Demonslayer: Path of Time  </a> (2002)
+<li><a href="Avatar112.jpg">Demonslayer: Prophecy  </a> (2001)
+<li><a href="Avatar113.jpg">Demonslayer: Rave  </a> (2001)
+<li><a href="Avatar114.jpg">Demonslayer: Vengeance     </a> (2001)
+<li><a href="Avatar115.jpg">Dicks  </a> (2012)
+<li><a href="Avatar116.jpg">Dicks 2    </a> (2002)
+<li><a href="Avatar117.jpg">Dicks Winter Special   </a> (2005)
+<li><a href="Avatar118.jpg">Dicks X-Mas Special    </a> (2003)
+<li><a href="Avatar119.jpg">Dicks: To the End of Time, Like    </a> (2014)
+<li><a href="Avatar120.jpg">Disenchanted Debut     </a> (2013)
+<li><a href="Avatar121.jpg">Doktor Sleepless   </a> (2007)
+<li><a href="Avatar122.jpg">Doktor Sleepless Manual    </a> (2008)
+<li><a href="Avatar123.jpg">Donna Mia  </a> (1997)
+<li><a href="Avatar124.jpg">Donna Mia Giant-Size   </a> (1997)
+<li><a href="Avatar125.jpg">Donna Mia Infinity     </a> (1998)
+<li><a href="Avatar126.jpg">Donna Mia Pinup    </a> (1997)
+<li><a href="Avatar127.jpg">Donna Mia: The Tower   </a> (1998)
+<li><a href="Avatar128.jpg">Dreamwalker    </a> (1998)
+<li><a href="Avatar129.jpg">Dreamwalker: Carousel  </a> (1999)
+<li><a href="Avatar130.jpg">Dreamwalker: Summer Rain   </a> (1999)
+<li><a href="Avatar131.jpg">Escape of the Living Dead  </a> (2005)
+<li><a href="Avatar132.jpg">Escape of the Living Dead Annual   </a> (2007)
+<li><a href="Avatar133.jpg">Escape of the Living Dead Fearbook     </a> (2006)
+<li><a href="Avatar134.jpg">Escape of the Living Dead: Airborne    </a> (2006)
+<li><a href="Avatar135.jpg">Exposure Second Coming     </a> (2000)
+<li><a href="Avatar136.jpg">Exposure Special 2001  </a> (2001)
 <li><a href="Avatar.jpg">Extinction Parade  </a> (2013)
 <li><a href="Avatar.jpg">Extinction Parade: War     </a> (2014)
 <li><a href="Avatar.jpg">Fashion Beast  </a> (2012)
