--- a/Vertigo/Vertigo.html
+++ b/Vertigo/Vertigo.html
@@ -50,40 +50,40 @@ Titles
 <li><a href="Vertigo2.jpg">Absolute Peacher</a> (2016)
 <li><a href="Vertigo3.jpg">Absolute Sandman</a> (2006)
 <li><a href="../AbsoluteVertigo/AbsoluteVertigo.html">Absolute Vertigo</a> (1995)
-<li>Accelerate</a> (2000)
-<li>Adventures in the Rifle Brigade</a> (2000)
-<li>Adventures in the Rifle Brigade: Operation: Bollock</a> (2001)
-<li>Air</a> (2008)
-<li>Alcoholic</a>  (2008)
-<li>American Carnage</a> (2018)
-<li>American Century</a> (2001)
-<li>American Freak: A Tale of the Un-Men</a> (1994)
-<li>American Splendor</a> (2006)
-<li>American Vampire</a> (2010)
-<li>American Vampire Anthology</a> (2013)
-<li>American Vampire: The Long Road To Hell</a> (2013)
-<li>American Vampire: Lord of Nightmares (2012)
-<li>American Vampire: Second Cycle  #1–11   May 2014 – Jan. 2016 
-<li>American Vampire: Survival of the Fittest   #1–5    Aug. 2011 – Dec. 2011 
-<li>American Virgin     #1–23   May 2006 – Mar. 2008 
-<li>American Way: Those Above and Those Below   #1–6    Sep. 2017 – Apr. 2018 
-<li>Angel and the Ape   #1–4    Oct. 2001 – Jan. 2002 
-<li>Angeltown   #1–5    Jan. 2005 – May 2005 
-<li>Animal Man  #57–89  Mar. 1993 – Nov. 1995 
-<li>Area 10     Graphic novel   2010
-<li>Arcana: The Books of Magic Annual   #1  1994
-<li>Army@Love   #1–12   May 2007 – Apr. 2008 
-<li>Army@Love: The Art of War   #1–6    Oct. 2008 – Mar. 2009 
-<li>Art Ops     #1–12   Dec. 2015 – Oct. 2016 
-<li>Astro City  #1–52   Aug. 2013 – Aug. 2008 
-<li>Bang Tango  #1–6    Apr. 2009 – Sep. 2009 
-<li>Barnum!: In Secret Service to the USA   Graphic novel   2003
-<li>Battleaxes  #1–4    May 2000 – Aug. 2000 
-<li>Beware the Creeper  #1–5    Jun. 2003 – Oct. 2003 
-<li>Bigg Time: A Farcical Fable of Fleeting Time    Graphic novel   2002
-<li>Bite Club   #1–6    Jun. 2004 – Nov. 2004 
-<li>Bite Club: Vampire Crime Unit   #1–5    Jun. 2006 – Oct. 2006 
-<li>Black Orchid    #1–22   Sep. 1993 – Jun. 1995 
+<li><a href="Vertigo4.jpg">Accelerate</a> (2000)
+<li><a href="../AdventuresInTheRifleBrigade/AdventuresInTheRifleBrigade.html">Adventures in the Rifle Brigade</a> (2000)
+<li><a href="../AdventuresInTheRifleBrigade/AdventuresInTheRifleBrigade.html">Adventures in the Rifle Brigade: Operation: Bollock</a> (2001)
+<li><a href="../Air/Air.html">Air</a> (2008)
+<li><a href="../Alcoholic/alcoholic.html">Alcoholic</a>  (2008)
+<li><a href="Vertigo5.jpg">American Carnage</a> (2018)
+<li><a href="../AmericanCentury/AmericanCentury.html">American Century</a> (2001)
+<li><a href="../AmericanFreak/AmericanFreak.html">American Freak: A Tale of the Un-Men</a> (1994)
+<li><a href="../AmericanSplendor/AmericanSplendor.html">American Splendor</a> (2006)
+<li><a href="../AmericanVampire/AmericanVampire.html">American Vampire</a> (2010)
+<li><a href="../AmericanVampire/AmericanVampire.html">American Vampire Anthology</a> (2013)
+<li><a href="../AmericanVampire/AmericanVampire.html">American Vampire: The Long Road To Hell</a> (2013)
+<li><a href="../AmericanVampire/AmericanVampire.html">American Vampire: Lord of Nightmares (2012)
+<li><a href="../AmericanVampire/AmericanVampire.html">American Vampire: Second Cycle (2014) 
+<li><a href="../AmericanVampire/AmericanVampire.html">American Vampire: Survival of the Fittest (2011) 
+<li><a href="../AmericanVirgin/AmericanVirgin.html">American Virgin</a> (2006) 
+<li><a href="Vertigo6.jpg">American Way: Those Above and Those Below</a> (2017) 
+<li><a href="../AngelAndTheApe/AngelAndTheApe.html">Angel and the Ape</a> (2001) 
+<li><a href="../Angeltown/Angeltown.html">Angeltown</a> (2005) 
+<li><a href="../AnimalMan/AnimalMan.html">Animal Man</a> (1993) 
+<li><a href="../Area10/Area10.html">Area 10</a> (2010)
+<li><a href="Vertigo7.jpg">Arcana: The Books of Magic Annual</a> (1994)
+<li><a href="../ArmyAtLove/ArmyAtLove.html">Army@Love</a> (2007) 
+<li><a href="Vertigo8.jpg">Army@Love: The Art of War</a> (2008) 
+<li><a href="../ArtOps/ArtOps.html">Art Ops</a> (2015) 
+<li><a href="Vertigo9.jpg">Astro City</a>  (2013)
+<li><a href="../BangTango/BangTango.html">Bang Tango</a> (2009) 
+<li><a href="../Barnum/Barnum.html">Barnum!: In Secret Service to the USA</a>   2003
+<li><a href="../Battleaxes/Battleaxes.html">Battleaxes</a> (2000) 
+<li><a href="../BewareTheCreeper/BewareTheCreeper.html">Beware the Creeper</a> (2003) 
+<li><a href="../BiggTime/BiggTime.html">Bigg Time: A Farcical Fable of Fleeting Time</a> (2002)
+<li><a href="../BiteClub/BiteClub.html">Bite Club</a> (2004) 
+<li><a href="Vertigo10.jpg">Bite Club: Vampire Crime Unit</a> (2006) 
+<li><a href="../BlackOrchid/BlackOrchid.html">Black Orchid</a> (1993) 
 <li>Blood &amp; Water   #1–5    May 2003 – Sep. 2003 
 <li>Blood and Shadows   #1–4    1996
 <li>Blood: A Tale   #1–4    Nov. 1996 – Feb. 1997 
