--- a/Vertigo/Vertigo.html
+++ b/Vertigo/Vertigo.html
@@ -19,10 +19,33 @@
 <div class="modal-content">
 
 <div class="mySlides" style="text-align: center;"><img src="Vertigo.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../99days/99days.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../100Percent/100Percent001.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../100Bullets/100BulletsTPB1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../2020Visions/2020Visions01.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../ADD/ADD.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../AaronAndAhmed/aaronandahmed.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Vertigo1.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Vertigo2.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Vertigo3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="../AbsoluteVertigo/AV.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Vertigo4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Vertigo5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Vertigo6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Vertigo7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Vertigo8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Vertigo9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Vertigo10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Vertigo11.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Vertigo12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Vertigo13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Vertigo14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Vertigo15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Vertigo16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Vertigo17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Vertigo18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Vertigo19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Vertigo20.jpg"></div>
 
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -63,45 +86,45 @@ Titles
 <li><a href="../AmericanVampire/AmericanVampire.html">American Vampire Anthology</a> (2013)
 <li><a href="../AmericanVampire/AmericanVampire.html">American Vampire: The Long Road To Hell</a> (2013)
 <li><a href="../AmericanVampire/AmericanVampire.html">American Vampire: Lord of Nightmares (2012)
-<li><a href="../AmericanVampire/AmericanVampire.html">American Vampire: Second Cycle (2014) 
-<li><a href="../AmericanVampire/AmericanVampire.html">American Vampire: Survival of the Fittest (2011) 
-<li><a href="../AmericanVirgin/AmericanVirgin.html">American Virgin</a> (2006) 
-<li><a href="Vertigo6.jpg">American Way: Those Above and Those Below</a> (2017) 
-<li><a href="../AngelAndTheApe/AngelAndTheApe.html">Angel and the Ape</a> (2001) 
-<li><a href="../Angeltown/Angeltown.html">Angeltown</a> (2005) 
-<li><a href="../AnimalMan/AnimalMan.html">Animal Man</a> (1993) 
+<li><a href="../AmericanVampire/AmericanVampire.html">American Vampire: Second Cycle (2014)
+<li><a href="../AmericanVampire/AmericanVampire.html">American Vampire: Survival of the Fittest (2011)
+<li><a href="../AmericanVirgin/AmericanVirgin.html">American Virgin</a> (2006)
+<li><a href="Vertigo6.jpg">American Way: Those Above and Those Below</a> (2017)
+<li><a href="../AngelAndTheApe/AngelAndTheApe.html">Angel and the Ape</a> (2001)
+<li><a href="../Angeltown/Angeltown.html">Angeltown</a> (2005)
+<li><a href="../AnimalMan/AnimalMan.html">Animal Man</a> (1993)
 <li><a href="../Area10/Area10.html">Area 10</a> (2010)
 <li><a href="Vertigo7.jpg">Arcana: The Books of Magic Annual</a> (1994)
-<li><a href="../ArmyAtLove/ArmyAtLove.html">Army@Love</a> (2007) 
-<li><a href="Vertigo8.jpg">Army@Love: The Art of War</a> (2008) 
-<li><a href="../ArtOps/ArtOps.html">Art Ops</a> (2015) 
+<li><a href="../ArmyAtLove/ArmyAtLove.html">Army@Love</a> (2007)
+<li><a href="Vertigo8.jpg">Army@Love: The Art of War</a> (2008)
+<li><a href="../ArtOps/ArtOps.html">Art Ops</a> (2015)
 <li><a href="Vertigo9.jpg">Astro City</a>  (2013)
-<li><a href="../BangTango/BangTango.html">Bang Tango</a> (2009) 
-<li><a href="../Barnum/Barnum.html">Barnum!: In Secret Service to the USA</a>   2003
-<li><a href="../Battleaxes/Battleaxes.html">Battleaxes</a> (2000) 
-<li><a href="../BewareTheCreeper/BewareTheCreeper.html">Beware the Creeper</a> (2003) 
+<li><a href="../BangTango/BangTango.html">Bang Tango</a> (2009)
+<li><a href="../Barnum/Barnum.html">Barnum!: In Secret Service to the USA</a>  (2003)
+<li><a href="../Battleaxes/Battleaxes.html">Battleaxes</a> (2000)
+<li><a href="../BewareTheCreeper/BewareTheCreeper.html">Beware the Creeper</a> (2003)
 <li><a href="../BiggTime/BiggTime.html">Bigg Time: A Farcical Fable of Fleeting Time</a> (2002)
-<li><a href="../BiteClub/BiteClub.html">Bite Club</a> (2004) 
-<li><a href="Vertigo10.jpg">Bite Club: Vampire Crime Unit</a> (2006) 
-<li><a href="../BlackOrchid/BlackOrchid.html">Black Orchid</a> (1993) 
-<li>Blood &amp; Water   #1–5    May 2003 – Sep. 2003 
-<li>Blood and Shadows   #1–4    1996
-<li>Blood: A Tale   #1–4    Nov. 1996 – Feb. 1997 
-<li>Bodies  #1–8    Sep. 2014 – Apr. 2015 
-<li>Books of Faerie     #1–3    Mar. 1997 – May 1997 
-<li>Books of Faerie: Auberon's Tale     #1–3    Aug. 1998 – Oct. 1998 
-<li>Books of Faerie: Molly's Story  #1–4    Sep. 1999 – Dec. 1999 
-<li>Books of Magic  #1–75   May 1994 – Aug. 2000 
-<li>Books of Magick: Life During Wartime    #1–15   Sep. 2004 – Dec. 2005 
-<li>Border Town     #1–4    Sep. 2018 – Dec. 2018 
-<li>Brave Old World     #1–4    Feb. 2000 – May 2000 
-<li>Breathtaker     #1–4    Jul. 1990 – Oct. 1990 
-<li>Bronx Kill  Graphic novel   Mar. 2010 
-<li>Cairo   Graphic novel   Nov. 2007 
-<li>Can't Get No    Graphic novel   Jun. 2006 
-<li>Chiaroscuro: The Private Lives of Leonardo da Vinci     #1–10   Jul. 1995 – Apr. 1996 
-<li>Children's Crusade  #1–2    Dec. 1993 – Jan. 1994 
-<li>Chill    2010 
+<li><a href="../BiteClub/BiteClub.html">Bite Club</a> (2004)
+<li><a href="Vertigo10.jpg">Bite Club: Vampire Crime Unit</a> (2006)
+<li><a href="../BlackOrchid/BlackOrchid.html">Black Orchid</a> (1993)
+<li><a href="Vertigo11.jpg">Blood &amp; Water</a> (2003)
+<li><a href="Vertigo12.jpg">Blood and Shadows</a>  (1996)
+<li><a href="Vertigo13.jpg">Blood: A Tale</a> (1996)
+<li><a href="Vertigo14.jpg">Bodies</a> (2014)
+<li><a href="../BooksOfFaerie/BooksOfFaerie.html">Books of Faerie</a> (1997)
+<li><a href="Vertigo15.jpg">Books of Faerie: Auberon's Tale</a> (1998)
+<li><a href="Vertigo16.jpg">Books of Faerie: Molly's Story</a> (1999)
+<li><a href="../BooksOfMagic/BooksOfMagic.html">Books of Magic</a> (1994)
+<li><a href="../BooksOfMagicLifeWartime/BooksOfMagicLifeWartime.html">Books of Magick: Life During Wartime</a> (2004)
+<li><a href="Vertigo17.jpg">Border Town</a> (2018)
+<li><a href="Vertigo18.jpg">Brave Old World</a> (2000)
+<li><a href="Vertigo19.jpg">Breathtaker</a> (1990)
+<li><a href="../BronxKill/BronxKill.html">Bronx Kill</a> (2010)
+<li><a href="../Cairo/Cairo.html">Cairo</a> (2007)
+<li><a href="../CantGetNo/CantGetNo.html">Can't Get No</a> (2006)
+<li><a href="../Chiaroscuro/Chiaroscuro.html">Chiaroscuro: The Private Lives of Leonardo da Vinci</a> (1995)
+<li><a href="Vertigo20.jpg">Children's Crusade</a> (1993)	
+<li><a href="../Chill/Chill.html">Chill</a> (2010)
 <li>Cinderella: Fables are Forever  #1–6    Apr. 2011 – Sep. 2011 
 <li>Cinderella: From Fabletown with Love    #1–6    Jan. 2010 – Jun. 2010 
 <li>Clean Room  #1–18   Dec. 2015 – Jun. 2017 
@@ -239,7 +262,7 @@ Titles
 <li>Jonny Double    #1–4    Sep. 1998 – Dec. 1998 
 <li>Junk Culture    #1–2    Jul. 1997 – Aug. 1997 
 <li>Kid Eternity    #1–16   May 1993 – Sep. 1994 
-<li><a href="Vertigo2.jpg">Kill Your Boyfriend</a> (1995) 
+<li><a href="Vertigo20.jpg">Kill Your Boyfriend</a> (1995) 
 <li>King David  Graphic novel   May 2002 
 <li>Last Gang in Town   #1–6    Feb. 2016 – Aug. 2016 
 <li>Last One    #1–6    Jul. 1993 – Dec. 1993 
