--- a/Moonshadow/Moonshadow.html
+++ b/Moonshadow/Moonshadow.html
@@ -2,60 +2,66 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="../ZimStyles.css">
+<link rel="stylesheet" href="../slideshow.css">
+<script src="../slideshow.js"></script>
 <title>Moonshadow</title>
 </head>
 
 <body>
-<img src="Moonshadow1.jpg"> <br>
+<img src="Moonshadow1.jpg"> 
+<p>
+<div class="row"><div class="column">
+<img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+</div> </div>
+
+<div id="myModal" class="modal">
+<span class="close cursor" onclick="closeModal()">&times;</span>
+<div class="modal-content">
+
+<div class="mySlides" style="text-align: center;"><img src="Moonshadow1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Moonshadow2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Moonshadow3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Moonshadow4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Moonshadow5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Moonshadow6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Moonshadow7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Moonshadow8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Moonshadow9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Moonshadow10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Moonshadow11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Moonshadow12.jpg"></div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div></div>
+</p><p>
 Series: 12 issues 1985-1987<br>
 Publisher: Epic, Marvel<br>
 <p>
 Issue #1 "Songs of Happy Chear" Moonshadow is a mature readers title (in the true sense of the term) chronicling the adventures of a young man raised in an intergalactic zoo. This issue introduces the key cast members, including Moonshadow, Ira, Sunflower, and the G'L Doses. Script by J.M. DeMatteis. Pencils, inks, and cover by Jon J. Muth.
 </p><p>
-<img src="Moonshadow2.jpg">
-</p><p>
 #2 "A Very Unfortunate Thing" Sunflower, who is Moonshadow's mother, is eaten alive by a baby alien she is trying to help.
-</p><p>
-<img src="Moonshadow3.jpg">
 </p><p>
 #3 "The Crying of the Wind." With Ira's help, Moonshadow escapes from an insane asylum, only to get caught up in the character's heist scheme. Script by J.M. DeMatteis. Pencils, inks, and cover by Kent Williams.
 </p><p>
-<img src="Moonshadow4.jpg">
-</p><p>
 #4 "The Hoofs of Wrath." Moonshadow and Ira join the army and end up in a confusing war. Script by J.M. DeMatteis. Pencils, inks, and cover by Jon J. Muth.
-</p><p>
-<img src="Moonshadow5.jpg">
 </p><p>
 #5 "In a Lone Land." This gruesome Vietnam allegory, in addition to showing the horrors of war, explores Moonshadow's genealogy. Script by J.M. DeMatteis. Pencils, inks, and cover by Jon J. Muth.
 </p><p>
-<img src="Moonshadow6.jpg">
-</p><p>
 #6 "Through the Window." Moonshadow and the indulgent Ira are rewarded for their valor on the field of battle. Script by J.M. DeMatteis. Pencils, inks, and cover by Kent Williams.
-</p><p>
-<img src="Moonshadow7.jpg">
 </p><p>
 #7 "Counterpane." This issue introduces Pobidiah Unkshush, whose family provides a suitable nemesis for the sympathetic title character. Moonshadow is ostracized by his former employers. Script by J.M. DeMatteis. Pencils, inks, and cover by Jon J. Muth.
 </p><p>
-<img src="Moonshadow8.jpg">
-</p><p>
 #8 "Candles." Moonshadow finds himself in a world that refuses to acknowledge his existence. Luckily, he reunites with Lord Gaylord. Script by J.M. DeMatteis. Pencils, inks, and cover by Jon J. Muth.
-</p><p>
-<img src="Moonshadow9.jpg">
 </p><p>
 #9 "Gloriously Crown'd." Moonshadow rescues the lecherous Ira from the despicable Unkshush family, who enlisted Ira to speak publicly about the war. Script by J.M. DeMatteis. Pencils, inks, and cover by Jon J. Muth. Cover price $1.50.
 </p><p>
-<img src="Moonshadow10.jpg">
-</p><p>
 #10 "A Liberal Dosage." Ira indulges his insatiable sexual appetite in this decidedly mature readers issue. Script by J.M. DeMatteis. Pencils and cover by Jon J. Muth. Inks by Kent Williams.
-</p><p>
-<img src="Moonshadow11.jpg">
 </p><p>
 #11 "Contradictions." Ira tells a variety of fictional origin stories to Moonshadow while imprisoned in the Unkshush dungeon. Script by J.M. DeMatteis. Pencils and cover by Jon J. Muth. Inks by George Pratt.
 </p><p>
-<img src="Moonshadow12.jpg">
-</p><p>
 #12 "With Joy to Hear." This issue finds followers of a religious cult searching for their spiritual leader. The final pages are absent of text, reinforcing the odd tone of the series. Script by J.M. DeMatteis. Pencils and cover by Jon J. Muth. Inks by Kent Williams.
 </p>
+
 </body>
 </html>
