--- a/Vertigo/Vertigo.html
+++ b/Vertigo/Vertigo.html
@@ -131,7 +131,7 @@ Titles
 <li><a href="../Knockout/Knockout.html">Codename: Knockout</a> (2001) 
 <li><a href="../CoffinHill/CoffinHill.html">Coffin Hill</a> (2013)
 <li><a href="Vertigo23.jpg">Collider</a> (2013)
-<li><a href="Vertigo24.jpg">Compleat Moonshadow</a> (1998)
+<li><a href="Vertigo24.jpg">Complete Moonshadow</a> (1998)
 <li><a href="Vertigo25.jpg">Congo Bill</a> (1999) 
 <li><a href="Vertigo26.jpg">Constantine: The Official Movie Adaptation</a> (2005)    
 <li><a href="Vertigo27.jpg">Cowboy Wally Show</a> (2003)
@@ -190,13 +190,13 @@ Titles
 <li><a href="Vertigo58.jpg">Faultlines</a> (1997) 
 <li><a href="../FBP/FBP.html">FBP: Federal Bureau of Physics</a> (2013) 
 <li><a href="Vertigo59.jpg">Fight for Tomorrow</a> (2002) 
-<li><a href="Vertigo60.jpg">Filth</a> (2002 – Oct. 2003 
+<li><a href="Vertigo60.jpg">Filth</a> (2002) 
 <li><a href="../FilthyRich/FilthyRich.html">Filthy Rich</a> (2009) 
 <li><a href="Vertigo61.jpg">Finals</a> (1999) 
 <li><a href="../FlexMentallo/FlexMentallo.html">Flex Mentallo</a> (1996) 
 <li><a href="Vertigo62.jpg">Flinch</a> (1999) 
 <li><a href="../Fogtown/Fogtown.html">Fogtown</a> (2010)
-<li><a href="Vertigo63.jpg">Fountain</a> (2005)
+<li><a href="../Fountain/Fountain.html">Fountain</a> (2006)
 <li><a href="Vertigo64.jpg">Four Horsemen</a> (2000) 
 <li><a href="Vertigo65.jpg">Frostbite</a> (2016) 
 <li><a href="Vertigo66.jpg">Gangland</a>  (1998) 
